--- a/j00/ex02/doft.css
+++ b/j00/ex02/doft.css
@@ -96,3 +96,17 @@
     margin-left: 25px;
     margin-bottom: 20px;
 }
+
+.green_box
+{
+    position: absolute;
+    left: 19%;
+    bottom: 16%;
+    width: 550px;
+    height: 200px;
+    font-size: 20px;
+    padding-left: 1%;
+    border-radius: 10px;
+    background-color: rgb(114, 218, 114); 
+    box-shadow: 10px 10px 5px black;
+}
