--- a/rush_00/style/mainbar.css
+++ b/rush_00/style/mainbar.css
@@ -4,9 +4,7 @@
 	/* flex-wrap: wrap; */
 	/* flex-direction: row; */
 	overflow: scroll;
-	height: 100vw;
 }
-
 
 .mainbar
 {
@@ -33,14 +31,13 @@
 {
 	display: flex;
 	align-content: center;
+	justify-content: flex-start;
 	flex-direction: column;
 	padding-top: 1em;
 	padding-bottom: 1em;
-	padding-left: 30em;
-	padding-right: 30em;
 	width: 10vw;
 	color: white;
-	font-size: 20px;
+	font-size: 1.5vw;
 	background-color: #333;
 	border-radius: 1em;
 	color: whitesmoke;
@@ -49,8 +46,23 @@
 .flex-container 
 {
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
 	justify-content: space-around;
+	align-content: center;
 	list-style: none;
+	padding: 0.4vw;
+	margin: 0;
+}
+
+.flex-container2 
+{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-content: center;
+	list-style: none;
+	font-size: 0.5vw;
 	padding: 0;
 	margin: 0;
 }
