--- a/rush_00/style/basketbar.css
+++ b/rush_00/style/basketbar.css
@@ -35,9 +35,9 @@
 	flex-direction: column;
 	padding-top: 1em;
 	padding-bottom: 1em;
-	width: 10vh;
+	width: 8vh;
 	color: white;
-	font-size: 20px;
+	font-size: 1.2vw;
 	background-color: #333;
 	border-radius: 1em;
 	color: whitesmoke;
